--- a/app/src/main/res/layout/activity_environment_list.xml
+++ b/app/src/main/res/layout/activity_environment_list.xml
@@ -64,12 +64,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <ImageView
-                        android:layout_width="150sp"
-                        android:layout_height="150sp"
-                        android:scaleType="centerCrop"
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/med1_image"
-                        android:src="@drawable/focus"/>
+                        app:cardCornerRadius="12dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_width="150sp"
+                            android:layout_height="150sp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/hills"/>
+
+                    </androidx.cardview.widget.CardView>
+
 
                     <TextView
                         android:id="@+id/med1_text"
@@ -86,12 +94,7 @@
                         android:textAlignment="center"
                         android:textColor="#4F7282"/>
 
-
                 </RelativeLayout>
-
-
-
-
 
             </androidx.cardview.widget.CardView>
 
@@ -110,12 +113,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <ImageView
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="wrap_content"
                         android:id="@+id/med2_image"
-                        android:layout_width="150sp"
-                        android:layout_height="150sp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/focus"/>
+                        app:cardCornerRadius="12dp"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_width="150sp"
+                            android:layout_height="150sp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/mountain"/>
+
+                    </androidx.cardview.widget.CardView>
 
                     <TextView
                         android:id="@+id/med2_text"
@@ -132,12 +142,7 @@
                         android:textAlignment="center"
                         android:textColor="#4F7282"/>
 
-
-
                 </RelativeLayout>
-
-
-
 
             </androidx.cardview.widget.CardView>
 
@@ -156,12 +161,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <ImageView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/med3_image"
-                        android:layout_width="150sp"
-                        android:layout_height="150sp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/focus"/>
+                        app:cardCornerRadius="12dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_width="150sp"
+                            android:layout_height="150sp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/space"/>
+
+                    </androidx.cardview.widget.CardView>
 
                     <TextView
                         android:id="@+id/med3_text"
@@ -197,12 +209,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <ImageView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/med4_image"
-                        android:layout_width="150sp"
-                        android:layout_height="150sp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/focus"/>
+                        app:cardCornerRadius="12dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_width="150sp"
+                            android:layout_height="150sp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/android"/>
+
+                    </androidx.cardview.widget.CardView>
 
                     <TextView
                         android:id="@+id/med4_text"
@@ -239,12 +258,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <ImageView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/med5_image"
-                        android:layout_width="150sp"
-                        android:layout_height="150sp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/focus"/>
+                        app:cardCornerRadius="12dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_width="150sp"
+                            android:layout_height="150sp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/android"/>
+
+                    </androidx.cardview.widget.CardView>
 
                     <TextView
                         android:id="@+id/med5_text"
@@ -263,8 +289,6 @@
 
                 </RelativeLayout>
 
-
-
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -281,12 +305,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <ImageView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/med6_image"
-                        android:layout_width="150sp"
-                        android:layout_height="150sp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/focus"/>
+                        app:cardCornerRadius="12dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:layout_width="150sp"
+                            android:layout_height="150sp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/android"/>
+
+                    </androidx.cardview.widget.CardView>
 
                     <TextView
                         android:id="@+id/med6_text"
@@ -304,8 +335,6 @@
                         android:textColor="#4F7282"/>
 
                 </RelativeLayout>
-
-
 
             </androidx.cardview.widget.CardView>
 
