--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent">
     </FrameLayout>
 
-    <androidx.appcompat.widget.SearchView
+    <!--<androidx.appcompat.widget.SearchView
         android:id="@+id/search_view"
         android:layout_width="200sp"
         android:layout_height="30sp"
@@ -28,23 +28,23 @@
 
     <ListView
         android:layout_below="@id/search_view"
+        android:background="@color/white"
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        />-->
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         app:itemTextAppearance="?android:attr/textAppearanceLarge"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="20sp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/bottom_background"
-        android:layout_marginStart="40sp"
-        android:layout_marginEnd="40sp"
+        android:layout_marginStart="30sp"
+        android:layout_marginEnd="30sp"
         app:menu="@menu/bottom_nav"
-        app:itemTextColor="@color/bottom_nav_text_color"
+        app:itemBackground="@color/bot_nav_color"
         android:textStyle="bold"
-        android:layout_marginBottom="30sp"/>
+        android:layout_marginBottom="20sp"/>
 
 </RelativeLayout>
