Changed name of asana's, and removed the scroll bar

--- a/app/src/main/res/layout/activity_yoga_channel1_list.xml
+++ b/app/src/main/res/layout/activity_yoga_channel1_list.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="none"
     tools:context=".channel_yoga_list.yoga_channel1_list">
 
     <RelativeLayout
@@ -74,7 +75,7 @@
                         android:id="@+id/yoga1_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Yoga 1"
+                        android:text="Tadasana"
                         android:textSize="20sp"
                         android:fontFamily="@font/century_gothic"
                         android:layout_centerVertical="true"
@@ -116,7 +117,7 @@
                         android:id="@+id/yoga2_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Yoga 2"
+                        android:text="Vrikshasana"
                         android:textSize="20sp"
                         android:fontFamily="@font/century_gothic"
                         android:layout_centerVertical="true"
@@ -159,7 +160,7 @@
                         android:id="@+id/yoga3_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Yoga 3"
+                        android:text="Adho Mukho Svanasana"
                         android:textSize="20sp"
                         android:fontFamily="@font/century_gothic"
                         android:layout_centerVertical="true"
@@ -201,7 +202,7 @@
                         android:id="@+id/yoga4_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Yoga 4"
+                        android:text="Balasana"
                         android:textSize="20sp"
                         android:fontFamily="@font/century_gothic"
                         android:layout_centerVertical="true"
@@ -282,7 +283,7 @@
                         android:id="@+id/yoga6_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Yoga 6"
+                        android:text="Kursiasana"
                         android:textSize="20sp"
                         android:fontFamily="@font/century_gothic"
                         android:layout_centerVertical="true"
@@ -323,7 +324,7 @@
                         android:id="@+id/yoga7_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Yoga 7"
+                        android:text="Naukasana"
                         android:textSize="20sp"
                         android:fontFamily="@font/century_gothic"
                         android:layout_centerVertical="true"
@@ -364,7 +365,7 @@
                         android:id="@+id/yoga8_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Yoga 8"
+                        android:text="Pashchimottasana"
                         android:textSize="20sp"
                         android:fontFamily="@font/century_gothic"
                         android:layout_centerVertical="true"
@@ -405,7 +406,7 @@
                         android:id="@+id/yoga9_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Yoga 9"
+                        android:text="Trikonasana"
                         android:textSize="20sp"
                         android:fontFamily="@font/century_gothic"
                         android:layout_centerVertical="true"
